<resources>
    <string name="app_name">BolívarApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Salír de BolívarApp</string>
    <string name="action_tutorial">Ir al Tutorial</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="t1Default">2</string>
    <string name="t2Default">1.5</string>
    <string name="etiqBs">"BsS 0.00"</string>
    <string name="etiqPs">"$ 0.00"</string>
    <string name="patchXMLB1">bdveftocop</string>
    <string name="patchXMLB2">bdTasasB</string>
    <string name="patchXMLP1">bdcoptovef</string>
    <string name="patchXMLP2">bdTasasP</string>
    <string name="versionApp">v1.7 | 2019</string>
    <string name="title_vef">VEF</string>
    <string name="title_cop">COP</string>
    <string name="title_app">App</string>
    <string name="developer">"Desarrollo: LeoCode"</string>
</resources>
