<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="BOLIVARES A PESOS"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputVEF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:drawableBottom="@color/colorAccent"
        android:ems="10"
        android:hint="@string/title_vef"
        android:inputType="phone"
        android:digits="0123456789.,Bs "
        android:maxLength="17"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorHighlight="@color/colorHintText"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <TextView
        android:id="@+id/txt_tasa1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text=" Efectivo"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputVEF" />


    <TextView
        android:id="@+id/txt_tasa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:gravity="end"
        android:text="Transferencia "
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputVEF" />

    <EditText
        android:id="@+id/tasa1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusable="auto"
        android:imeOptions="actionGo"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:text="@string/t1Default"
        android:textAlignment="center"
        android:textColorHighlight="@color/colorHintText"
        android:textColorHint="@android:color/background_dark"
        android:textColorLink="@android:color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tasa1" />

    <EditText
        android:id="@+id/tasa2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:ems="10"
        android:focusable="auto"
        android:imeOptions="actionGo"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:text="@string/t2Default"
        android:textAlignment="center"
        android:textColorHighlight="@color/colorHintText"
        android:textColorHint="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tasa2" />

    <TextView
        android:id="@+id/textResultE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:text="@string/etiqPs"
        android:textColor="@android:color/holo_green_dark"
        android:textColorHighlight="@android:color/holo_green_dark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasa1" />

    <TextView
        android:id="@+id/textResultT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/etiqPs"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasa2" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/textResultT"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/lbl_developers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cleanRow">

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dip"
            android:scrollbars="none">

            <TableLayout
                android:id="@+id/lista"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:isScrollContainer="true">


            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="AGREGAR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResultT" />

    <Button
        android:id="@+id/btn_cleanRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="LIMPIAR TABLA"
        app:layout_constraintEnd_toStartOf="@+id/btn_save"
        app:layout_constraintStart_toEndOf="@+id/btn_clean"
        app:layout_constraintTop_toBottomOf="@+id/textResultT" />

    <Button
        android:id="@+id/btn_clean"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="LIMPIAR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResultT" />

    <TextView
        android:id="@+id/lbl_developers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lbl_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versionApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>